examples/valid/program5.c
int main(void) {
    int a;
    int b;
    int result;
    a = 7;
    b = 3;
    result = a * b;
    return result;
}

