examples/invalid/program77.c
int main(void) {
    int value;
    value = 3;
    value = *value;
    return value;
}


